--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,19 +23,22 @@ jobs:
       - name: Build and push db_service image
         run: |
           REPO_NAME=${{ github.repository }}
-          docker build -t ghcr.io/${REPO_NAME}/db_service:latest -f ./app/container_h4_Simple/db_container/Dockerfile ./app/container_h4_Simple/db_container
-          docker push ghcr.io/${REPO_NAME}/db_service:latest
+          REPO_NAME_LOWER=$(echo $REPO_NAME | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/${REPO_NAME_LOWER}/db_service:latest -f ./app/container_h4_Simple/db_container/Dockerfile ./app/container_h4_Simple/db_container
+          docker push ghcr.io/${REPO_NAME_LOWER}/db_service:latest
 
       # 4. Build y push app_service
       - name: Build and push app_service image
         run: |
           REPO_NAME=${{ github.repository }}
-          docker build -t ghcr.io/${REPO_NAME}/app_service:latest -f ./app/container_h4_Simple/app_container/Dockerfile ./app/container_h4_Simple/app_container
-          docker push ghcr.io/${REPO_NAME}/app_service:latest
+          REPO_NAME_LOWER=$(echo $REPO_NAME | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/${REPO_NAME_LOWER}/app_service:latest -f ./app/container_h4_Simple/app_container/Dockerfile ./app/container_h4_Simple/app_container
+          docker push ghcr.io/${REPO_NAME_LOWER}/app_service:latest
 
       # 5. Build y push logs_service
       - name: Build and push logs_service image
         run: |
           REPO_NAME=${{ github.repository }}
-          docker build -t ghcr.io/${REPO_NAME}/logs_service:latest -f ./app/container_h4_Simple/logs_container/Dockerfile ./app/container_h4_Simple/logs_container
-          docker push ghcr.io/${REPO_NAME}/logs_service:latest
+          REPO_NAME_LOWER=$(echo $REPO_NAME | tr '[:upper:]' '[:lower:]')
+          docker build -t ghcr.io/${REPO_NAME_LOWER}/logs_service:latest -f ./app/container_h4_Simple/logs_container/Dockerfile ./app/container_h4_Simple/logs_container
+          docker push ghcr.io/${REPO_NAME_LOWER}/logs_service:latest
