--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -42,3 +42,12 @@ jobs:
           REPO_NAME_LOWER=$(echo $REPO_NAME | tr '[:upper:]' '[:lower:]')
           docker build -t ghcr.io/${REPO_NAME_LOWER}/logs_service:latest -f ./app/container_h4_Simple/logs_container/Dockerfile ./app/container_h4_Simple/logs_container
           docker push ghcr.io/${REPO_NAME_LOWER}/logs_service:latest
+          
+      # 6. Ejecutar tests antes de construir las imágenes Docker
+      - name: Run tests
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
+          pytest --maxfail=5 --disable-warnings -v tests/
+
