--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,45 +13,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      # 1. Checkout del código fuente
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.12'
+      # 2. Login a GitHub Container Registry (ghcr.io)
+      - name: Log in to GitHub Container Registry
+        run: echo "${{ secrets.CR_PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-    # Instalar Docker Compose
-    - name: Install Docker Compose
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y docker-compose
+      # 3. Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-    # Autenticarse en GitHub Container Registry (GHCR)
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ secrets.GITHUB_ACTOR }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      # 4. Instalar pipenv
+      - name: Install pipenv
+        run: pip install pipenv
 
-    - name: Install pipenv
-      run: pip install pipenv
+      # 5. Instalar dependencias
+      - name: Install dependencies
+        run: pipenv install --dev
 
-    - name: Install dependencies
-      run: pipenv install --dev
+      # 6. Ejecutar pruebas
+      - name: Run tests
+        run: pipenv run pytest --junitxml=report.xml
 
-    # Levantar los contenedores con Docker Compose
-    - name: Start Docker containers
-      run: docker-compose up -d
-
-    # Ejecutar tests
-    - name: Run tests
-      run: pipenv run pytest --junitxml=report.xml
-
-    # Subir informe de tests
-    - name: Upload test report
-      if: always()
-      uses: actions/upload-artifact@v3
-      with:
-        name: test-report
-        path: report.xml
+      # 7. Subir informe de pruebas
+      - name: Upload test report
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-report
+          path: report.xml
