--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,6 @@ sqlalchemy==2.0.36; python_version >= '3.7'
 typing-extensions==4.12.2; python_version >= '3.8'
 werkzeug==3.1.2; python_version >= '3.9'
 wtforms==3.2.1; python_version >= '3.9'
+uvicorn==0.27.1
+psycopg2-binary
+requests
