--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       # 1. Checkout del código fuente
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3  # Verifica si hay v4 o versión más nueva disponible
 
       # 2. Login a GitHub Container Registry
       - name: Log in to GitHub Container Registry
@@ -29,7 +29,7 @@ jobs:
 
       # 4. Configurar Python
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v4  # Verifica si hay v5 o versión más nueva disponible
         with:
           python-version: '3.12'
 
@@ -48,7 +48,7 @@ jobs:
       # 8. Subir informe de pruebas
       - name: Upload test report
         if: always()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v3  # Verifica si hay v4 o versión más nueva disponible
         with:
           name: test-report
           path: report.xml
